--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
             DATABASE_PORT: ${DATABASE_PORT}
             DATABASE_USERNAME: ${DATABASE_USERNAME}
             DATABASE_PASSWORD: ${DATABASE_PASSWORD}
+            ADMIN_JWT_SECRET: ${ADMIN_JWT_SECRET}
         volumes:
             - ./app:/srv/app
         ports:
