--- a/app/.eslintrc
+++ b/app/.eslintrc
@@ -23,5 +23,13 @@
     "no-console": 0,
     "quotes": ["error", "single"],
     "semi": ["error", "always"]
+  },
+  "settings": {
+    "import/resolver": {
+      "alias": {
+        "map": [["@api", "./api"]],
+        "extensions": [".js", ".ts", ".tsx"]
+      }
+    }
   }
 }
