--- a/app/package.json
+++ b/app/package.json
@@ -13,14 +13,15 @@
   "dependencies": {
     "strapi": "3.6.1",
     "strapi-admin": "3.6.1",
-    "strapi-utils": "3.6.1",
-    "strapi-plugin-content-type-builder": "3.6.1",
+    "strapi-connector-mongoose": "3.6.1",
     "strapi-plugin-content-manager": "3.6.1",
-    "strapi-plugin-users-permissions": "3.6.1",
+    "strapi-plugin-content-type-builder": "3.6.1",
     "strapi-plugin-email": "3.6.1",
-    "strapi-plugin-upload": "3.6.1",
+    "strapi-plugin-graphql": "3.6.1",
     "strapi-plugin-i18n": "3.6.1",
-    "strapi-connector-mongoose": "3.6.1"
+    "strapi-plugin-upload": "3.6.1",
+    "strapi-plugin-users-permissions": "3.6.1",
+    "strapi-utils": "3.6.1"
   },
   "author": {
     "name": "A Strapi developer"
