--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 DATABASE_CLIENT=mongo
 DATABASE_NAME=strapi
-DATABASE_HOST=mongoexample
+DATABASE_HOST=mongodb
 DATABASE_PORT=27017
 DATABASE_USERNAME=
 DATABASE_PASSWORD=
