--- a/app/api/article/models/article.settings.json
+++ b/app/api/article/models/article.settings.json
@@ -40,22 +40,6 @@
         }
       }
     },
-    "meta_description": {
-      "type": "text",
-      "pluginOptions": {
-        "i18n": {
-          "localized": true
-        }
-      }
-    },
-    "meta_title": {
-      "type": "string",
-      "pluginOptions": {
-        "i18n": {
-          "localized": true
-        }
-      }
-    },
     "contents": {
       "type": "dynamiczone",
       "components": [
@@ -67,6 +51,25 @@
           "localized": true
         }
       }
+    },
+    "Seo": {
+      "type": "component",
+      "repeatable": false,
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      },
+      "component": "shared.seo"
+    },
+    "slug": {
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      },
+      "type": "uid",
+      "targetField": "title"
     }
   }
 }
